--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Cabezera</h1>
+<h1>Exercicis:</h1>
+<ul>
+    <li> <a href="paginesweb/exercici1.html">Exercici 1</a>
+
+  <li>  <a href="paginesweb/exercici1.1.html">Exercici 1.1</a> </li>
+<li> <a href="paginesweb/exercici2.html">Exercici 2</a> </li>
+<li> <a href="paginesweb/exercici3.html">Exercici 3</a> </li>
+<li> <a href="paginesweb/exercici4.html">Exercici 4</a> </li>
+<li> <a href="paginesweb/exercici5.html">Exercici 5</a> </li>
+<li> <a href="paginesweb/exercici6.html">Exercici 6</a> </li>
+<li><a href="paginesweb/Exercici7.1.html"></a></li>
+<li><a href="paginesweb/Exercici7.html"></a></li> </ul>
