--- a/paginesweb/exercici4.html
+++ b/paginesweb/exercici4.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+ <h1>Super Smash Bros.Ultimate DLC Fighters</h1>   
+ <ul>
+     <li>Piranha Plant</li>
+ <li>Joker</li>
+ <li>Hero</li>
+ <li>Banjo & Kazooie</li>
+ <li>Terry</li>
+ <li>Byleth</li>
+ <li>Min Min</li>
+ <li>Steve /Alex</li>
+ <li>Sephiroth</li>
+ <li>Pyra /Mythra</li>
+ <li>Kazuya</li>
+ <li>Sora</li></ul>
 </body>
 </html>
