--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
 <li> <a href="paginesweb/exercici6.html">Exercici 6</a> </li>
 <li><a href="paginesweb/Exercici7.1.html"></a></li>
 <li><a href="paginesweb/Exercici7.html"></a></li> </ul>
+<li><a href="paginesweb/Exwecicic8.html"></a></li> </ul>
