--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <li> <a href="paginesweb/exercici4.html">Exercici 4</a> </li>
 <li> <a href="paginesweb/exercici5.html">Exercici 5</a> </li>
 <li> <a href="paginesweb/exercici6.html">Exercici 6</a> </li>
-<li><a href="paginesweb/Exercici7.1.html"></a></li>
-<li><a href="paginesweb/Exercici7.html"></a></li> </ul>
-<li><a href="paginesweb/Exwecicic8.html"></a></li> </ul>
+<li><a href="paginesweb/Exercici7.1.html">Exercici 7.1</a></li>
+<li><a href="paginesweb/Exercici7.html"></a></li>Exercici 7 </ul>
+<li><a href="paginesweb/Exwecicic8.html"></a></li> Exercici 8</ul>
