--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <li> <a href="paginesweb/exercici5.html">Exercici 5</a> </li>
 <li> <a href="paginesweb/exercici6.html">Exercici 6</a> </li>
 <li><a href="paginesweb/Exercici7.1.html">Exercici 7.1</a></li>
-<li><a href="paginesweb/Exercici7.html"></a></li>Exercici 7</a> </ul>
-<li><a href="paginesweb/Exwecicic8.html"></a></li>Exercici 8</a> </ul>
+<li><a href="paginesweb/Exercici7.html">Exercici 7</a></li>
+<li><a href="paginesweb/Exwecicic8.html">Exercici 8</a></li>
