--- a/paginesweb/Exwecicic8.html
+++ b/paginesweb/Exwecicic8.html
@@ -4,12 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/Tabla1 estilo.css ">
     <title>Document</title>
 </head>
 <body>
 <h1></h1>
     <table>
     <caption>Títol de la taula</caption>
+    <tr>
+        <th>Imagen</th>
+        <th>Datos</th>
+ </tr>
+ <tr>
+     <td><img src="../img/Captura.PNG" width="130"></td>
+     <td><pre><a href=""Portátil - HP Laptop 15s-fq2003ns, 15.6
+        <td><pre><a href="https://www.mediamarkt.es/es/product/_port%C3%A1til-hp-laptop-15s-fq2003ns-15-6-fhd-intel%C2%AE-core%E2%84%A2-i5-1135g7-512gb-ssd-8gb-w10-home-plata-1495723.html">Portátil - HP Laptop 15s-fq2003ns, 15.6
+       
+Comprar 595€.
+     </pre></td>
+ </tr>
+ <tr>
+     <td><img src="../img/Captura1.PNG" width="140" ></td>
+     <td><pre><a href="https://www.mediamarkt.es/es/product/_videoc%C3%A1mara-canon-legria-hf-g26-full-hd-20x-digic-4-cmos-hd-pro-f-1-8-2-8-1436900.html">Videocámara - Canon Legria HF G26, Full HD
+Comprar 999€ </a></pre></td>
+ </tr>
+ <tr>
+     <td><img src="../img/Captura2.PNG" width="130"></td>
+     <td><pre><a href="https://www.mediamarkt.es/es/product/televisin-stream-system-40-dled-full-hd-bms40f-88266729.html">Televisión Stream System 40" 
+Comprar 323€
+     </pre></td>
+ </tr>
+ <tr>
+     <td><img src="../img/Captura3.PNG" width="112"></td>
+     <td><pre><a href="https://www.mediamarkt.es/es/product/_movil-xiaomi-redmi-9c-azul-128-gb-4-gb-ram-653-hd-mediatek-helio-g35-5000-mah-android-1515267.html">Móvil - Xiaomi Redmi 9C
+Comprar 159€
+     </pre></td>
+ </tr>
 </table>
 </body>
 </html>
