--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
 <li><a href="paginesweb/Exercici7.1.html">Exercici 7.1</a></li>
 <li><a href="paginesweb/Exercici7.html">Exercici 7</a></li>
 <li><a href="paginesweb/Exwecicic8.html">Exercici 8</a></li>
+<li><a href="paginesweb/exercici9.html">Exercici 9</a></li>
+<li><a href="paginesweb/receptes.html">Exercici 10</a></li>
