--- a/paginesweb/Exercici7.1.html
+++ b/paginesweb/Exercici7.1.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Menú</h1>
-  <ul>
-      <li>Inicio</li> 
-      <li>Noticias</li>
-      <ul>
-        <li><a href="https://www.google.com/search?q=perro&rlz=1C1GCEU_esES971ES972&sxsrf=AOaemvKZAiZB4f5mEAIGcFv-IyR444v3wQ:1637613009049&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj3yLvt56z0AhXFzqQKHdmgAnwQ_AUoAXoECAEQAw&biw=958&bih=959&dpr=1">Reciente</a></li>
-        <li><a href="https://www.google.com/search?q=elefante&rlz=1C1GCEU_esES971ES972&sxsrf=AOaemvIIApOCOhHyVWHsphZO_y_CBuBtiw:1637677259117&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjzz6Sa1670AhUNCewKHXfcDQ8Q_AUoAXoECAEQAw&biw=958&bih=959&dpr=1">Más leidas</a></li>
-        <li><a href="https://www.google.com/search?rlz=1C1GCEU_esES971ES972&hl=es&sxsrf=AOaemvJzqbFG8lwuZCvQYNogxcazAD7bCg:1637677472075&source=lnms&tbm=isch&q=Vaca%20de%20las%20tierras%20altas&sa=X&ved=2ahUKEwi9x-r_1670AhWG6qQKHYn5C-gQ_AUoAXoECAEQAw&biw=958&bih=959&dpr=1">Mas valoradas</a></li>
-    </ul> </ul>
-
-    <ul><li>Artículos</li><ol><li>XHTML</li><li>CSS</li>
-    <li>JavaScript
-        <li>Otros</li>
-    </li></ol></ul>
     <ul>
-        <li>Contacto</li></ul>
-    <p><pre>
+        <li>Inicio</li>
+        <li>Noticias</li>
+        <ul>
+            <li><a
+                    href="https://www.google.com/search?q=perro&rlz=1C1GCEU_esES971ES972&sxsrf=AOaemvKZAiZB4f5mEAIGcFv-IyR444v3wQ:1637613009049&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj3yLvt56z0AhXFzqQKHdmgAnwQ_AUoAXoECAEQAw&biw=958&bih=959&dpr=1">Reciente</a>
+            </li>
+            <li><a
+                    href="https://www.google.com/search?q=elefante&rlz=1C1GCEU_esES971ES972&sxsrf=AOaemvIIApOCOhHyVWHsphZO_y_CBuBtiw:1637677259117&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjzz6Sa1670AhUNCewKHXfcDQ8Q_AUoAXoECAEQAw&biw=958&bih=959&dpr=1">Más
+                    leidas</a></li>
+            <li><a
+                    href="https://www.google.com/search?rlz=1C1GCEU_esES971ES972&hl=es&sxsrf=AOaemvJzqbFG8lwuZCvQYNogxcazAD7bCg:1637677472075&source=lnms&tbm=isch&q=Vaca%20de%20las%20tierras%20altas&sa=X&ved=2ahUKEwi9x-r_1670AhWG6qQKHYn5C-gQ_AUoAXoECAEQAw&biw=958&bih=959&dpr=1">Mas
+                    valoradas</a></li>
+        </ul>
+    </ul>
+
+    <ul>
+        <li>Artículos</li>
+        <ol>
+            <li>XHTML</li>
+            <li>CSS</li>
+
+            <li>JavaScript
+            <li>Otros</li>
+            </li>
+        </ol>
+    </ul>
+    <ul>
+        <li>Contacto</li>
+    </ul>
+    <p>
+    <pre>
         Email    
             holaquetal@gmail.com
         Telefono
              900 900 900
         Fax
 
-   </pre> </p>
+   </pre>
+    </p>
 </body>
+
 </html>
