--- a/paginesweb/receptes.html
+++ b/paginesweb/receptes.html
@@ -20,7 +20,7 @@
             </td>
         </tr>
         <tr>
-            <td>Patatas fritas </td>
+            <td><a target="_blank" href="patatasfritas.html">Patatas fritas </a></td>
             <td rowspan="2"><img src="../img/taco mexicano.png" width="300"></td>
         </tr>
         <tr>
