--- a/paginesweb/receptes.html
+++ b/paginesweb/receptes.html
@@ -24,7 +24,7 @@
             <td rowspan="2"><img src="../img/taco mexicano.png" width="300"></td>
         </tr>
         <tr>
-            <td>Quiche</td>
+            <td><a target="_blank" href="Quiche de verduras.html">Quiche</a></td>
         </tr>
         </tr>
 
