--- a/paginesweb/exercici11.html
+++ b/paginesweb/exercici11.html
@@ -11,51 +11,53 @@
  <h1>SMX2B</h1>   
  <table>
     <tr><td>15.15 16.15</td>
-<td>smx-m06 
+<td class="m06">smx-m06 
     INF-PS17     or 22</td>
-<td>smx-m08 
+<td class="m08">smx-m08 
     Duran       or 22</td>
 <td></td>
 <td></td>
-<td>smx-m04 
+<td class="m04">smx-m04 
     INF-PTO9    or 22</tr>
 </td>
 <tr>
 <th>16.15 17.15</th>
-<td>smx-m06 
+<td class="m06">smx-m06 
      INF-PS17    or 22</td>
-<th>smx-m08 
+<th class="m08"> smx-m08 
     Duran        or 22</th> 
-<th>smx-m08 
+<th class="m08">smx-m08 
     Duran        or 22</th>  
 <th></th>
-<th>smx-m04 
+<th class="m04">smx-m04 
     INF-PT09     or 22</th>
 </tr> 
 <tr>
 <th> 17.15 18.15</th>
-<th>smx-m06 
+<th class="m06">smx-m06 
     INF-PS17    or 22</th>
-<th>smx-m08 
+<th class="m07">smx-m07 
+Gut:Carles  or 22</th>
+<th class="m08">smx-m08 
     Duran       or 22</th>
-<td>smx-m07 
+<td class="m07">smx-m07 
     Gut:Carles  or 22</td>
-<td>smx-m10EIE 
+<td class="m10eie">smx-m10EIE 
     Ferri       or 21</td>
 </tr>
 <tr>
-<th>D- </th>
-<th>E- </th>
-<th>S- </th>
-<th>C  </th>
-<th>A </th>
-<Th>NS</Th>
+<th class="des">D- </th>
+<th class="des">E- </th>
+<th class="des">S- </th>
+<th class="des">C  </th>
+<th class="des">A </th>
+<Th class="des">NS</Th>
 </tr>
 <tr>
-<th>18.45 19.45</th>
-<th>smx-m08 
+<th class="des">18.45 19.45</th>
+<th class="m08">smx-m08 
     Duran       or 22</th>
-<th>smx-m06 
+<th class="">smx-m06 
     INF-PS17     or 22</th>
 <th>smx-m07 
     Gut:Carles  or 22</th>
