--- a/paginesweb/exercici9.html
+++ b/paginesweb/exercici9.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,46 +8,60 @@
     <link rel="stylesheet" href="../css/Tabla2 estilo.css">
     <title>Document</title>
 </head>
+
 <body>
     <table>
         <caption>Comparativa de reproductores Mp3</caption>
-       <tr>
-        <th>
-        </th>
-        <th colspan="3"><img src="../img/mp/mp3_pequeno_blanco.png"> <img src="../img/mp/mp3_pequeno_negro.png">
-            <p>MP3 mini</p></th>
-        <th colspan="3"><img src="../img/mp/mp3_grande_blanco.png">  <img src="../img/mp/mp3_grande_negro.png">
-         
-         <p>MP3 grande</p></th> </tr> 
         <tr>
-         <td><p>Capacidat de almacenamiento</p></td>
-        <td><p>4GB 
-            (1.000 canciones)
-        </p></td>
-        <td><p>8GB
-            (2.000 canciones)</p></td>
-        <td><p>16GB (4.000 canciones)</p></td>
-        <td>30GB (7.500 canciones)</td>
-        <td>80GB (20.000 canciones)</td>
+            <th>
+            </th>
+            <th colspan="3"><img src="../img/mp/mp3_pequeno_blanco.png"> <img src="../img/mp/mp3_pequeno_negro.png">
+                <p>MP3 mini</p>
+            </th>
+            <th colspan="3"><img src="../img/mp/mp3_grande_blanco.png"> <img src="../img/mp/mp3_grande_negro.png">
+
+                <p>MP3 grande</p>
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <p>Capacidat de almacenamiento</p>
+            </td>
+            <td>
+                <p>4GB
+                    (1.000 canciones)
+                </p>
+            </td>
+            <td>
+                <p>8GB
+                    (2.000 canciones)</p>
+            </td>
+            <td>
+                <p>16GB (4.000 canciones)</p>
+            </td>
+            <td>30GB (7.500 canciones)</td>
+            <td>80GB (20.000 canciones)</td>
         </tr>
         <tr>
             <td>Colores</td>
-        <td><img src="../img/mp/color_blanco.png" ></td>
-        <td><img src="../img/mp/color_negro.png"> <img src="../img/mp/color_verde.png"> <img src="../img/mp/color_azul.png"> <img src="../img/mp/color_rosa.png"></td>
-        <td><img src="../img/mp/color_negro.png"></td>
-        <td colspan="2"><img src="../img/mp/color_blanco.png"><img src="../img/mp/color_negro.png"></td>    
+            <td><img src="../img/mp/color_blanco.png"></td>
+            <td><img src="../img/mp/color_negro.png"> <img src="../img/mp/color_verde.png"> <img
+                    src="../img/mp/color_azul.png"> <img src="../img/mp/color_rosa.png"></td>
+            <td><img src="../img/mp/color_negro.png"></td>
+            <td colspan="2"><img src="../img/mp/color_blanco.png"><img src="../img/mp/color_negro.png"></td>
         </tr>
         <tr>
             <td>Pantalla</td>
             <td colspan="3">LCD de 3 cm (diagonal) con retroiluminación</td>
             <td colspan="2">LCD de 6 cm (diagonal) con retroiluminación</td>
-            <tr>
-                <td rowspan="3">Tiempo de carga</td>
-                <td colspan="3">Unas 3 horas</td>
-                <td rowspan="2">Unas 4 horas</td>
-                <td colspan="">Unas 2 horas para alcanzar el 80% de la capacidad</td>
-            </tr>
+        <tr>
+            <td rowspan="3">Tiempo de carga</td>
+            <td colspan="3">Unas 3 horas</td>
+            <td rowspan="2">Unas 4 horas</td>
+            <td colspan="">Unas 2 horas para alcanzar el 80% de la capacidad</td>
+        </tr>
         </tr>
     </table>
 </body>
+
 </html>
