ecercici 11 + añadido a indice

--- a/paginesweb/exercici11.html
+++ b/paginesweb/exercici11.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,93 +8,82 @@
     <link rel="stylesheet" href="../css/ex11.css">
     <title>Document</title>
 </head>
+
 <body>
- <h1>SMX2B</h1>   
- <table>
-    <tr><td>15.15 16.15</td>
-<td class="m06">smx-m06 
-    INF-PS17     or 22</td>
-<td class="m08">smx-m08 
-    Duran       or 22</td>
-<td></td>
-<td></td>
-<td class="m04">smx-m04 
-    INF-PTO9    or 22</tr>
-</td>
-<tr>
-<th>16.15 17.15</th>
-<td class="m06">smx-m06 
-     INF-PS17    or 22</td>
-<th class="m08"> smx-m08 
-    Duran        or 22</th> 
-<th class="m08">smx-m08 
-    Duran        or 22</th>  
-<th></th>
-<th class="m04">smx-m04 
-    INF-PT09     or 22</th>
-</tr> 
-<tr>
-<th> 17.15 18.15</th>
-<th class="m06">smx-m06 
-    INF-PS17    or 22</th>
-<th class="m07">smx-m07 
-Gut:Carles  or 22</th>
-<th class="m08">smx-m08 
-    Duran       or 22</th>
-<td class="m07">smx-m07 
-    Gut:Carles  or 22</td>
-<td class="m10eie">smx-m10EIE 
-    Ferri       or 21</td>
-</tr>
-<tr>
-<th class="des">D- </th>
-<th class="des">E- </th>
-<th class="des">S- </th>
-<th class="des">C  </th>
-<th class="des">A </th>
-<Th class="des">NS</Th>
-</tr>
-<tr>
-<th class="des">18.45 19.45</th>
-<th class="m08">smx-m08 
-    Duran       or 22</th>
-<th class="">smx-m06 
-    INF-PS17     or 22</th>
-<th>smx-m07 
-    Gut:Carles  or 22</th>
-<th>smx-m07 
-    Gut:Carles  or 22</th>
-<th>smx-m10EIE 
-    Ferri       or 21</th>
-</tr>
-<tr>
- <th>19.45 20.45</th>
- <th>smx-m08 
-    Duran       or 22</th>
- <th>smx-m04 
-    INF-PT09     or 22</th>
- <th>smx-m07 
-    Gut:Carles  or 22</th>
- <th>smx-m07 
-    Gut:Carles  or 22</th>
- <th></th>   
-</tr>
-<tr>
- <th>20.45 21.45</th>
- <th>smx-m08 
-    Duran       or 22</th>
- <th>smx-m04 
-    INF-PT09     or 22</th>
- <th>smx-m07 
-    Gut:Carles  or 22</th>
- <th>Tut-Alum 
-     Gut:CaRles
- </th>
- <th></th>   
-</tr>
+    <h1>SMX2B</h1>
+    <table>
+        <tr>
+            <td>15.15 16.15</td>
+            <td rowspan="3" class="m06">smx-m06 <br>
+                INF-PS17 <br> or 22</td>
+            <td rowspan="3" class="m08">smx-m08 <br>
+                Duran <br> or 22</td>
+            <td></td>
+            <td></td>
+            <td rowspan="2" class="m04">smx-m04 <br>
+                INF-PTO9 <br> or 22
+        </tr>
+        </td>
+        <tr>
+            <th>16.15 17.15</th>
 
 
-     
+            <th></th>
+
+        </tr>
+        <tr>
+            <th> 17.15 18.15</th>
+
+            <th class="m07">smx-m07 <br>
+                Gut:Carles <br> or 22</th>
+
+            <td class="m07">smx-m07 <br>
+                Gut:Carles <br> or 22</td>
+            <td class="m10eie">smx-m10EIE <br>
+                Ferri <br> or 21</td>
+        </tr>
+        <tr>
+            <th class="des">D- </th>
+            <th class="des">E- </th>
+            <th class="des">S- </th>
+            <th class="des">C </th>
+            <th class="des">A </th>
+            <Th class="des">NS</Th>
+        </tr>
+        <tr>
+            <th >18.45 19.45</th>
+            <th rowspan="3" class="m08">smx-m08 <br>
+                Duran <br> or 22</th>
+            <th  rowspan="" class="m06">smx-m06 <br>
+                INF-PS17 <br>   or 22</th>
+            <th class="m07">smx-m07
+                Gut:Carles or 22</th>
+            <th rowspan="2" class="m07">smx-m07 <br>
+                Gut:Carles <br> or 22</th>
+
+            <th class="m10eie">smx-m10EIE <br>
+                Ferri <br> or 21</th>
+        </tr>
+        <tr>
+            <th>19.45 20.45</th>
+            <th rowspan="2" class="m04">smx-m04 <br>
+                INF-PT09 <br> or 22</th>
+            <th rowspan="2" class="m07">smx-m07 <br>
+                Gut:Carles <br> or 22</th>
+
+            <th></th>
+        </tr>
+        <tr>
+            <th>20.45 21.45</th>
+            <th class="tut">Tut-Alum <br>
+                Gut:CaRles
+            </th>
+            <th></th>
+        </tr>
+
+
+
 
 </body>
+
 </html>
