--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@
 <li><a href="paginesweb/Exwecicic8.html">Exercici 8</a></li>
 <li><a href="paginesweb/exercici9.html">Exercici 9</a></li>
 <li><a href="paginesweb/receptes.html">Exercici 10</a></li>
+<li><a href="paginesweb/exercici11.html">Exercici 10</a></li>
