--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
 <li><a href="paginesweb/receptes.html">Exercici 10</a></li>
 <li><a href="paginesweb/exercici11.html">Exercici 11</a></li>
 <li><a href="paginesweb/exercici12.html">Exercici 12</a></li>
-<li><a href="paginesweb/exercici13.html">Exercici 13</a></li>
+<li><a href="paginesweb/exercici13.html">Exercici 13....</a></li>
