--- a/paginesweb/meliodas.html
+++ b/paginesweb/meliodas.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meliodas</title>
+    <link rel="stylesheet" href="../css/ex12.css">
 </head>
 <body>
  <table>
-    <tr><img src=""></tr>
+    <tr>
+        <th><img src="../img/Meliodas_Anime_Season_3_Design.png" height="500"></th>
+    <th> <span class="meliodas">  Meliodas</span> (メリオダス, Meriodasu ?) es el líder de los Siete Pecados Capitales. Él es el protagonista masculino de la historia, su pecado es la Ira y su símbolo el Dragón, también es el propietario del Boar Hat. <br> <br>
+       <br> Su tesoro sagrado es la Espada Demoníaca Lostvayne y su poder inherente es Full Counter. Hace tres mil años, Meliodas fue el líder de los Diez Mandamientos, un ex miembro de Stigma, y el hijo mayor del Rey Demonio. Es  el Rey de Liones en la actualidad. <br>
+       <br><span class="apariencia">Apariencia </span>  <br>
+   <br> A pesar de tener cerca de 3000 años de edad, Meliodas tiene la apariencia de un preadolescente de aproximadamente 12 o 13 años de edad. Debido a esto, carece de rasgos adultos tales como el vello facial, y su estatura es bastante corta a comparación de otros personajes. Sus ojos son de color verde esmeralda brillante, que cambian a un tono completamente negro oscuro cuando desata su poder como demonio, revelando en su cara el símbolo del Clan de los Demonios. Su cabello es corto, de aspecto desordenado y de tonalidad rubia, con un largo mechón estilo Ahoge que sobresale de la parte superior de la cabeza <br>
+   <br> <span class="personalidat">Personalidad</span>  <br>
+   <br> Meliodas se caracteriza por su franqueza y valentía, que hacen contraste con su fuerte sentido de la justicia, razón por la cual está siempre dispuesto a ayudar a las personas en peligro. A pesar de su título como el pecado de la Ira, suele ser una persona muy serena. Sin embargo, si sus compañeros o amigos se ven perjudicados de alguna manera, muestra un enojo extremo, siendo capaz de intimidar hasta a un Caballero Sagrado y destruir todo lo que esté a su paso.
+</th></tr>
+<tr><th colspan="2"><video src="../videos/Netsujou no Spectrum Op 1 Full _ Nanatsu no Taizai _ .mp4" height="450"  autoplay></video></th></tr>
  </table>   
 </body>
 </html>
