--- a/paginesweb/Exwecicic8.html
+++ b/paginesweb/Exwecicic8.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/Tabla1 estilo.css ">
-    <title>Document</title>
+    <title>Exercici8</title>
 </head>
 <body>
 <h1></h1>
