--- a/paginesweb/exercici13.html
+++ b/paginesweb/exercici13.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercici13</title>
     <link rel="stylesheet" href="../css/formulario.css">
 </head>
 
 <body>
-   <h1>Curriculum</h1>
+  <fieldset>
+    <h1>Curriculum</h1>
     <form action="#" method="get">
         <fieldset class="datos">
             <legend>Datos personal</legend>
@@ -58,7 +59,7 @@
 <Fieldset class="final">
     <input type="submit" value="Enviar" name="enviar">
     <input type="reset" value="Cancelar" name="Cancelar">  
-</Fieldset>
+</Fieldset></fieldset>
 </body>
 
 </html>
