--- a/paginesweb/exercici5.html
+++ b/paginesweb/exercici5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercici5</title>
 </head>
 <body>
    <h1>How do I install League of Legends (LoL)on a computer?</h1> 
