--- a/paginesweb/diane.html
+++ b/paginesweb/diane.html
@@ -18,7 +18,7 @@
           <br> Como el pecado de la envidia de la serpiente, sus rasgos principales son los celos y la envidia, pero a pesar de su comportamiento y su aspecto, es una persona muy amable y amigable con quienes la rodean. <br> Ella muestra gran afecto y una cierta fascinación por Meliodas, así que cuando lo vio junto a Elizabeth, ella se puso muy celosa y comenzó a golpearlo llamándolo tramposo. <br> Ella es una persona muy fuerte y segura de sus habilidades, con gran ímpetu y de un espíritu valiente. Sin embargo, a pesar de sus fuertes convicciones, su verdadero deseo es ser una persona pequeña y normal. <br> Es muy protectora con sus amigos sobre todo con Meliodas, a tal punto, que es capaz de enfrentar sus peores miedos con tal de asegurar la vida de sus compañeros. <br>
         
         </th></tr>
-    <tr><th colspan="2"><video src="https://youtu.be/oplWNu1slRk" height="450"  autoplay></video></th></tr>
+    <tr><th colspan="2"><a target="_blank" href="https://www.youtube.com/watch?v=bE9o36kB3E8&ab_channel=Yo%2Cyomismaymiscosas"></a>
      </table>    
 </body>
 </html>
