--- a/paginesweb/diane.html
+++ b/paginesweb/diane.html
@@ -19,7 +19,7 @@
         
         </th></tr>
     <tr><th colspan="2"> <iframe width="420" height="315"
-        src="https://www.youtube.com/watch?v=oplWNu1slRk">
+        src="https://youtu.be/oplWNu1slRk">
         </iframe></th>
      </table>    
 </body>
