--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -8,7 +8,10 @@
 </head>
 <body>
    <table>
-       
-   </table> 
+    <a href="paginesweb/meliodas.html">Meliodas</a>
+    <a href="paginesweb/diane.html">Diane</a>
+    <a href="paginesweb/Elizabeth.html">Elizabeth</a>
+    <a href="paginesweb/hawk.html">Hawk</a></li>
+</table> 
 </body>
 </html>
