--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -8,10 +8,10 @@
 </head>
 <body>
    <table>
-    <a href="paginesweb/meliodas.html">Meliodas</a>
-    <a href="paginesweb/diane.html">Diane</a>
-    <a href="paginesweb/Elizabeth.html">Elizabeth</a>
-    <a href="paginesweb/hawk.html">Hawk</a></li>
+     <br><a href="paginesweb/meliodas.html">Meliodas</a> <br>
+    <br><a href="paginesweb/diane.html">Diane</a> <br>
+     <br><a href="paginesweb/Elizabeth.html">Elizabeth</a> <br>
+     <br><a href="paginesweb/hawk.html">Hawk</a> <br>
 </table> 
 </body>
 </html>
