--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercici12</title>
+    <link rel="stylesheet" href="../css/ex12.css">
 </head>
 <body>
-   <table>
+    <a href="paginesweb/meliodas.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
+        Meliodas
+    </a></li>
      <br><a href="paginesweb/meliodas.html">Meliodas</a> <br>
     <br><a href="paginesweb/diane.html">Diane</a> <br>
      <br><a href="paginesweb/Elizabeth.html">Elizabeth</a> <br>
      <br><a href="paginesweb/hawk.html">Hawk</a> <br>
-</table> 
+ 
 </body>
 </html>
