--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="../css/ex12.css">
 </head>
 <body>
-    <a href="paginesweb/meliodas.html" class="btn-neon">
+     <br><a href="paginesweb/meliodas.html" class="btn-neon">
         <span id="span1"></span>
         <span id="span2"></span>
         <span id="span3"></span>
         <span id="span4"></span>
         Meliodas
-    </a></li>
-     <br><a href="paginesweb/meliodas.html">Meliodas</a> <br>
+    </a> <br>
+     
     <br><a href="paginesweb/diane.html">Diane</a> <br>
      <br><a href="paginesweb/Elizabeth.html">Elizabeth</a> <br>
      <br><a href="paginesweb/hawk.html">Hawk</a> <br>
