--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -15,10 +15,28 @@
         <span id="span4"></span>
         Meliodas
     </a> <br>
-     
-    <br><a href="paginesweb/diane.html">Diane</a> <br>
-     <br><a href="paginesweb/Elizabeth.html">Elizabeth</a> <br>
-     <br><a href="paginesweb/hawk.html">Hawk</a> <br>
- 
+    <br><a href="paginesweb/diane.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
+        Diane
+    </a> <br>
+    <br><a href="paginesweb/elizabeth.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
+        Elizabeth
+    </a> <br>
+    <br><a href="paginesweb/hawk.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
+       Hawk
+    </a> <br>
+
+    
 </body>
 </html>
