--- a/paginesweb/exercici12 copy.html
+++ b/paginesweb/exercici12 copy.html
@@ -15,25 +15,25 @@
         <span id="span4"></span>
         Meliodas
     </a> <br>
-    <br><a href="paginesweb/diane.html" class="btn-neon2">
-        <span id="span1d"></span>
-        <span id="span2d"></span>
-        <span id="span3d"></span>
-        <span id="span4d"></span>
+    <br><a href="paginesweb/diane.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
         Diane
     </a> <br>
-    <br><a href="paginesweb/elizabeth.html" class="btn-neon3">
-        <span id="span1e"></span>
-        <span id="span2e"></span>
-        <span id="span3e"></span>
-        <span id="span4e"></span>
+    <br><a href="paginesweb/elizabeth.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
         Elizabeth
     </a> <br>
-    <br><a href="paginesweb/hawk.html" class="btn-neon4">
-        <span id="span1h"></span>
-        <span id="span2h"></span>
-        <span id="span3h"></span>
-        <span id="span4h"></span>
+    <br><a href="paginesweb/hawk.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
        Hawk
     </a> <br>
 
