--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -13,28 +13,28 @@
         <span id="span2"></span>
         <span id="span3"></span>
         <span id="span4"></span>
-        Meliodas
+        Meliodas.
     </a> <br>
     <br><a href="paginesweb/diane.html" class="btn-neon2">
         <span id="span1d"></span>
         <span id="span2d"></span>
         <span id="span3d"></span>
         <span id="span4d"></span>
-        Diane
+        Diane.
     </a> <br>
     <br><a href="paginesweb/elizabeth.html" class="btn-neon3">
         <span id="span1e"></span>
         <span id="span2e"></span>
         <span id="span3e"></span>
         <span id="span4e"></span>
-        Elizabeth
+        Elizabeth.
     </a> <br>
     <br><a href="paginesweb/hawk.html" class="btn-neon4">
         <span id="span1h"></span>
         <span id="span2h"></span>
         <span id="span3h"></span>
         <span id="span4h"></span>
-       Hawk
+       Hawk.
     </a> <br>
 
     
