--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -23,10 +23,10 @@
         Diane.
     </a> <br>
     <br><a href="paginesweb/elizabeth.html" class="btn-neon3">
-        <span id="span1e"></span>
-        <span id="span2e"></span>
-        <span id="span3e"></span>
-        <span id="span4e"></span>
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
         Elizabeth.
     </a> <br>
     <br><a href="paginesweb/hawk.html" class="btn-neon4">
