--- a/paginesweb/exercici12.html
+++ b/paginesweb/exercici12.html
@@ -15,7 +15,7 @@
         <span id="span4"></span>
         Meliodas
     </a> <br>
-    <br><a href="/diane.html" class="btn-neon">
+    <br><a href="diane.html" class="btn-neon">
         <span id="span1"></span>
         <span id="span2"></span>
         <span id="span3"></span>
