--- a/paginesweb/NF2/Eexercici1.html
+++ b/paginesweb/NF2/Eexercici1.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="inicio">
-
-
-
-
-
-    </div>
+<div class="alargado1"><p>.</p></div>
+<div class="pequeño2"><p>.</p></div>
+<div class="grande1"><p>.</p></di>
+<div class="grande2"><p>.</p></di>
+<div class="pequeño1"><p>.</p></di>
+<div class="alargado1"><p>.</p></di>
+<div class="alargado2"><p>.</p></di>
+<div class="grande1"><p>.</p></di>
+<div class="pequeño1"><p>.</p></di>
+<div class="pequeño2"><p>.</p></di>
+<div class="pequeno2"><p>.</p></di>
+<div class="pequeño1"><p>.</p></di>
+</div>
 </body>
 </html>
