--- a/paginesweb/NF2/Eexercici1.html
+++ b/paginesweb/NF2/Eexercici1.html
@@ -9,18 +9,25 @@
 </head>
 <body>
     <div class="inicio">
-<div class="alargado1"><p>.</p></div>
-<div class="pequeño2"><p>.</p></div>
-<div class="grande1"><p>.</p></di>
-<div class="grande2"><p>.</p></di>
-<div class="pequeño1"><p>.</p></di>
-<div class="alargado1"><p>.</p></di>
-<div class="alargado2"><p>.</p></di>
-<div class="grande1"><p>.</p></di>
-<div class="pequeño1"><p>.</p></di>
-<div class="pequeño2"><p>.</p></di>
-<div class="pequeno2"><p>.</p></di>
-<div class="pequeño1"><p>.</p></di>
+<div class="alargado1"></div>
+<div class="pequeno2"></div>
+
+
+<div class="grande1"></div>
+<div class="grande2"></div>
+<div class="pequeno1"></div>
+<div class="pequeno2"></div>
+<div class="alargado1"></div>
+<div class="grande2r"></div><div class="alargado2"></div>
+
+
+
+
+
+
+
+
+
 </div>
 </body>
 </html>
