--- a/paginesweb/NF2/Eexercici1.html
+++ b/paginesweb/NF2/Eexercici1.html
@@ -19,9 +19,9 @@
 <div class="pequeno2"></div>
 <div class="alargado1"></div>
 <div class="grande2r"></div><div class="alargado2"></div>
-
-
-
+<div class="pequeno1"></div>
+<div class="pequeno2"></div>
+<div class="pequeno1"></div>
 
 
 
