--- a/index.html
+++ b/index.html
@@ -16,3 +16,5 @@
 <li><a href="paginesweb/exercici11.html">Exercici 11</a></li>
 <li><a href="paginesweb/exercici12.html">Exercici 12</a></li>
 <li><a href="paginesweb/exercici13.html">Exercici 13</a></li>
+<li><a href="paginesweb/NF2/Eexercici1.html">Exercici nf2 1</a></li>
+<li><a href="paginesweb/NF2/Eexercici2.html">Exercici nf2 </a></li>
