--- a/paginesweb/NF2/Eexercici2.html
+++ b/paginesweb/NF2/Eexercici2.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../css/NF2/exercici1.css">
+    <link rel="stylesheet" href="../../css/NF2/exercici2.css">
 </head>
+
 <body>
     <div class="inicio">
-<div class="alargado1"></div>
-<div class="pequeno2"></div>
+        <div class="izquierda">
+            <div class="a1">1</div>
+            <div class="a2">2</div>
 
+            <div class="a3">3</div>
 
-<div class="grande1"></div>
-<div class="grande2"></div>
-<div class="pequeno1"></div>
-<div class="pequeno2"></div>
-<div class="alargado1"></div>
-<div class="grande2r"></div><div class="alargado2"></div>
+            <div class="a4">4</div>
 
 
 
 
 
+            <div class="a5">5</div>
+
+            <div class="a6">6</div>
+
+            <div class="a6">7</div>
+        </div>
+        <div clas="derecha">
+            <div class="a8">8</div>
+            <div class="a9">9</div>
+            <div class="a10">10</div>
+            <div class="a11">11</div>
+            <div class="a12">12</div>
+        </div>
 
 
 
 
-</div>
+
+
+    </div>
+    </div>
 </body>
+
 </html>
