--- a/index.html
+++ b/index.html
@@ -19,3 +19,4 @@
 <li><a href="paginesweb/NF2/Eexercici1.html">Exercici nf2 1</a></li>
 <li><a href="paginesweb/NF2/Eexercici2.html">Exercici nf2 2</a></li>
 <li><a href="paginesweb/NF2/Eexercici3.html">Exercici nf2 3</a></li>
+<li><a href="paginesweb/NF2/Eexercici4.html">Exercici nf2 4</a></li>
