--- a/index.html
+++ b/index.html
@@ -22,3 +22,4 @@
 <li><a href="paginesweb/NF2/Exercici2.html">Exercici nf2 2</a></li>
 <li><a href="paginesweb/NF2/Exercici3.html">Exercici nf2 3</a></li>
 <li><a href="paginesweb/NF2/Exercici4.html">Exercici nf2 4</a></li>
+<li><a href="paginesweb/NF2/Exercici5.html">Exercici nf2 5</a></li>
