--- a/index.html
+++ b/index.html
@@ -23,3 +23,4 @@
 <li><a href="paginesweb/NF2/Exercici3.html">Exercici nf2 3</a></li>
 <li><a href="paginesweb/NF2/Exercici4.html">Exercici nf2 4</a></li>
 <li><a href="paginesweb/practica_grid/propietat_grid.html">Exercici nf2 5</a></li>
+<li><a href="paginesweb/NF2/Exercici6.html">Exercici nf2 6</a></li>
