--- a/paginesweb/NF2/Exercici6.html
+++ b/paginesweb/NF2/Exercici6.html
@@ -9,8 +9,26 @@
 </head>
 <body>
   <div id="marco">
+<div class="cabezera"> 
+    <img src="../../img/HP/cabecera.png" alt="">
+<img class="tiempo" src="../../img/HP/tiempozodiaco.png" alt="">
+</div>
+<div id="div2">
+    <img class="sirius" src="../../img/HP/siriusblack.png" alt="">
+<img class="sighted" src="../../img/HP/sighted.png" alt="">
+<img class="izquierda1" src="../../img/HP/izquierda1.png" alt="">
+<img class="derecha1" src="../../img/HP/derecha1.png" alt="">
+<img class="izquierda2" src="../../img/HP/izquierda2.png" alt="">
+<img class="derecha2" src="../../img/HP/derecha2.png" alt="">
+</div>
+<div>
+        <img class="gif" src="../../img/HP/siriusBlackGif.gif" alt="">
+        <img class="izquierda3" src="../../img/HP/izquierda3.png" alt="">
+        <img class="foto" src="../../img/HP/piedefoto.png" alt="">
+        <img class="pie" src="../../img/HP/piedepagina.png" alt="">
+      
+      </div>
 
-    
   </div>  
 </body>
 </html>
